2002-03-24 John Fleck <jfleck@inkstain.net>

	* src/nautilus-shell-ui.xml
	* src/nautilus-window-menus.c
	remove link to release notes in help menu
	fixes bug #73077
	
2002-03-22  Havoc Pennington  <hp@pobox.com>

	* src/file-manager/fm-icon-view.c (should_preview_sound): set up
	an auto variable for the /desktop/gnome/sound/enable_esd setting,
	to avoid remote gconf query on every icon mouseover.

2002-03-22  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-properties-window.c: (create_emblems_page):
	use eel_scrolled_wrap_box_new().

	* components/news/nautilus-news.c:
	(check_button_focus_in_callback), (add_channel_entry): Use the 
	new eel_gtk_viewport functions to move the focused checkbox into
	view on focus changes.

2002-03-21 John Fleck <jfleck@inkstain.net>

	* help/nautilus-user-manual/C/nautilus-user-manual.xml, legal.xml
	first cut at modifying docs for GNOME2 Nautilus

2002-03-20  Michael Meeks  <michael@ximian.com>

	* src/nautilus-zoom-control.c (draw_number): revert
	my crack smoking fiddling with offsets changes - it seems
	ScaleableGorilla needs to change.

2002-03-20  Havoc Pennington  <hp@redhat.com>

	* libnautilus-private/nautilus-thumbnails.c: Add patch to
	re-thumbnail if the thumbnail timestamp is different from the 
	thumbnailed file (vs. newer). Fixes the case where people have
	files with future timestamps.

2002-03-20  Anders Carlsson  <andersca@gnu.org>

	* libnautilus-private/nautilus-directory-background.c 
	(nautilus_file_background_read_desktop_settings): 
	Comment out WPTYPE_EMBOSSED since it doesn't exist.

2002-03-19  Alexander Larsson  <alla@lysator.liu.se>

	Patch from Glen Gray <glen@antefacto.com>

	* components/hardware/icons/HD_drive.png:
	* components/hardware/icons/Makefile.am:
	Restore old harddrive icon
	
	* components/hardware/nautilus-hardware-view.c: (setup_form_title),
	(setup_overview_form):
	Use the hardrive icon. Make it look more like the 1.0.x version.

2002-03-19  Michael Meeks  <michael@ximian.com>
