@@ -1,3 +1,11 @@
+2002-03-24  Dave Camp  <dave@ximian.com>
+
+	* libnautilus-private/nautilus-entry.c: (nautilus_entry_init):
+	* libnautilus-private/nautilus-global-preferences.c:
+	* libnautilus-private/nautilus-global-preferences.h:
+	* src/nautilus-preferences-dialog.c: Remove references to the 
+	"Use Emacs-style keyboard shortcuts" preference.
+
 2002-03-24 John Fleck <jfleck@inkstain.net>
 
 	* src/nautilus-shell-ui.xml
